--- a/readme.org
+++ b/readme.org
@@ -18,3 +18,18 @@ Reproduction steps:
 - Run ~'eglot-code-actions~
 
 At this point I see “[eglot] No code actions here” in the minibuffer, when I expect to be offered options to add an import automatically for List.
+
+* Example Code Action
+
+#+begin_src emacs-lisp
+(:textDocument
+           (:uri "file:///Users/Emily/Desktop/scratch/app/Scratch.hs")
+           :range
+           (:start
+            (:line 1 :character 7)
+            :end
+            (:line 1 :character 7))
+           :context
+           (:diagnostics
+            []))
+#+end_src
